@@ -1,6 +1,8 @@
 2003-05-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
 
-	* configure.ac: 0.3b test release.
+	* dccserver.c (main): kill children when quitting.
+	(kill_children): new function.
+	(collect_child): handle sigchild.
 
 	* dccserver.c (main): use sigaction instead of signal, for better
 	portability.
